meta tags index

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,12 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Plataforma de criação de repositórios de conteúdos."
+    />
+    <meta name="keywords" content="Hashmap, link, tag" />
+    <meta name="author" content="Kleyson Morais" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <title>HashMap</title>
   </head>
