Config Router and Meta Tags

--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,71 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="%PUBLIC_URL%/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="%PUBLIC_URL%/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="%PUBLIC_URL%/favicon-16x16.png"
+    />
+    <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="%PUBLIC_URL%/safari-pinned-tab.svg"
+      color="#000000"
+    />
+    <meta name="msapplication-TileColor" content="#000000" />
+    <meta name="theme-color" content="#ffffff" />
+
     <meta
       name="description"
       content="Plataforma de criação de repositórios de conteúdos."
     />
     <meta name="keywords" content="Hashmap, link, tag" />
     <meta name="author" content="Kleyson Morais" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <title>HashMap</title>
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <!-- <meta
+      property="og:url"
+      content="%PUBLIC_URL%/imgs/logo/"
+    /> -->
+    <meta property="og:title" content="HashMap" />
+    <meta
+      property="og:description"
+      content="Plataforma de criação de repositórios de conteúdos."
+    />
+    <!-- <meta
+      property="og:image"
+      content="https://i.ytimg.com/vi/kPkKeGBSbCc/maxresdefault.jpg"
+    /> -->
+
+    <!-- Twitter -->
+    <!-- <meta property="twitter:card" content="summary_large_image" /> -->
+    <!-- <meta
+      property="twitter:url"
+      content="https://www.youtube.com/watch?v=kPkKeGBSbCc"
+    /> -->
+    <meta property="twitter:title" content="HashMap" />
+    <meta
+      property="twitter:description"
+      content="Plataforma de criação de repositórios de conteúdos."
+    />
+    <!-- <meta
+      property="twitter:image"
+      content="https://i.ytimg.com/vi/kPkKeGBSbCc/maxresdefault.jpg"
+    /> -->
   </head>
   <body>
     <div id="root"></div>
